# cms-l1t-analysis

./: .travis.yml  CHANGELOG.md  README.md  conda_requirements.txt  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt  setup.sh  start-centos7-docker.sh
.ci/: install.sh  test.sh
.github/workflows/: ci.yml  codeql.yml
ci/: Dockerfile
cmsl1t/: __init__.py  config.py  geometry.py
cmsl1t/analyzers/: BaseAnalyzer.py  HW_Emu_constant_rate_turnons.py  HW_Emu_jetMet_rates.py  demo_analyzer.py  inspector.py  jetMet_analyzer.py  legacy_analyzer.py  offline_met_analyzer.py  study_met.py  study_tower28_met.py
cmsl1t/hist/: binning.py  factory.py  hist_collection.py
cmsl1t/playground/: eventreader.py  jetfilters.py  lumifilters.py
cmsl1t/plotting/: base.py  efficiency.py  rate_vs_pileup.py  rates.py  resolution.py
cmsl1t/producers/: gensums.py  gensums_custTree.py  jets.py  l1p2sums.py  l1p2sums_custTree.py
cmsl1t/recalc/: jet_matching.py  met.py
cmsl1t/utils/: draw.py  hist.py  root_glob.py
config/: HW_Emu_constant_rate_turnons.yaml  HW_Emu_jetMet_rates.yaml  all2017.yaml  gen.yaml  jetMet_turnons.yaml  ntuple_content_mc.yaml  ntuple_content_mc_p2.yaml  offline_met_studies.yaml  p2JetMet.yaml  p2JetMet_custTree.yaml  p2JetMet_rates.yaml  p2JetMet_rates_custTree.yaml  pfJetEff.yaml  pfJetRates.yaml  rates.yaml
docker/: README.md
docker/ROOT/: Dockerfile  README.md  packages
docker/dev/: Dockerfile
docker/production/: Dockerfile  setup.sh
test/hist/: test_histogramCollection.py
test/recalc/: test_jet_match.py
